--- a/demo-app/index.html
+++ b/demo-app/index.html
@@ -7,7 +7,7 @@
     </style>
 </head>
 <body>
-    <h1>¡Hola desde GitHub!</h1>
-    <p>Esta página se actualiza automáticamente con GitOps.</p>
+    <h1>Hola desde GitHub</h1>
+    <p>Esta pagina se actualiza automaticamente con GitOps.</p>
 </body>
 </html>
