--- a/demo-app/index.html
+++ b/demo-app/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hola desde GitHub</h1>
     <p>Esta pagina se actualiza automaticamente con GitOps.</p>
+    <img src="https://media.giphy.com/media/3o7aD2saalBwwftBIY/giphy.gif" alt="GitOps GIF">
 </body>
 </html>
