--- a/app-demo/app/index.html
+++ b/app-demo/app/index.html
@@ -10,5 +10,6 @@
     <h1>Hola desde GitHub</h1>
     <p>Esta pagina se actualiza automaticamente con GitOps.</p>
     <img src="https://media.giphy.com/media/3o7aD2saalBwwftBIY/giphy.gif" alt="GitOps GIF">
+    <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" alt="DevOps GIF">
 </body>
 </html>
